syntax = "proto3";
import "Enum.proto";
import "01_player.proto";
package cspb.registry;

enum MsgId{
    __RESERVED = 0;
    
    CsLogin = 101;
    ScLogin = 102;
    CsFastLogin = 103;
    ScFastLogin = 104;

    CsEcho = 201;
    ScEcho = 202;
}